2007-06-19	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* Started PocketPC 'minimize' function
		Needs good placement
		Minimize feature can be ran by attempting to quit the game, choosing no, then choosing yes to minimize
		There are a few querks when reactivating Exult that need to be fixed
	* Fixed type-o in ChangeLog (from Lanaca to Lanica on 2007-06-16)
	* Removed PocketPC hardcoded configuration file location (was set to load from "\Exult\exult.cfg")
	* Fixed PocketPC relative pathing error (PocketPC does not have a "current directory")
	* Created easy way for dpad keymaps to be changed (Gameplay options, "D-PAD") for PocketPC users

2007-06-18	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	(Checked into CVS on 2007-06-19)
	* Fixed Makefile.common bug where EXPACK_CHECK would not get properly updated with Windows platforms
	* Updated MSVC9 project files to include "release" mode and also the PocketPC 2003 target

2007-06-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed special lights to work again.
	* Fixed UCC bug where a function's symbol type in the symbol table be
	  "extern" if the function was externed before being defined.
	* Added three new intrinsics from SI discovered with rip/wud/wuc:
		intrinsic 0x64 is resurrect_npc
		intrinsic 0xB9 is get_temperature_zone
		intrinsic 0xBB is get_npc_warmth
	  This affects UCC, WUD and WUC as well.
	* actors.cc: Fixed warmth given by several items.
	* gumps/Stats_gump.cc: Fixed slightly innacurate frame <> temperature map.


2007-06-16    <jeff@mini.nerble.net>

	* exult.cc,etc.: Applied Lanica's PocketPC patches.

2007-06-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Makefile.common: Ensure that changes to "bgintrinsics.h" and "siintrinsics.h"
	will affect builds of Exult, UCC, WUD and WUC.

2007-06-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* effects.*, gameclk.*, palette.*, objs/egg.cc: Implemented missing weather: