@@ -1,3 +1,10 @@
+2007-06-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* New intrinsic from SI discovered with rip/wud/wuc: intrinsic 0x96 is
+	  'can_avatar_reach_pos'. Since Exult already offers a more powerful variant
+	  ('is_dest_reachable', which works for any NPC not just the avatar), this
+	  intrinsic has *not* been made available to BG.
+
+
 2007-06-19	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
 	* Started PocketPC 'minimize' function
 		Needs good placement
